--- a/popup.html
+++ b/popup.html
@@ -8,12 +8,14 @@
 div {
     border-radius: 2vw !important;
     border: 0 solid black !important;
-    background-color:   #FFEFEF !important;
-    font-family: 'Schoolbell', arial, serif; 
+     background-color: rgba(255,255,255,0.5)  !important;
+     
+    font-family: "Hoefler Text", "Baskerville Old Face", Garamond, "Times New Roman", serif !important; font-size: 15px; font-style: normal; font-variant: normal; font-weight: bold !important; line-height: 16.5px;
     color: rgba(0,0,0,0.9) !important;
+   
 }
 html {
-    background-color: #FFEEEF;
+    background-image: linear-gradient(red,orange);
 }
 </style>
 </html>
