--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <script>
     function openNewWindow() {
-      window.open('popup.html', '', 'toolbar=no,menubar=no,width=400,height=300'); // Added toolbar=no, menubar=no, and size
+      window.open('popup.html', 'popup', 'toolbar=no,menubar=no,width=400,height=300'); // Added toolbar=no, menubar=no, and size
     }
   </script>
 </body>
